--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,201 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+.homeMain {
+  margin-top: 5%;
+  text-align: center;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.homeMain .homeTitle{
+  font-family: "Lucida Console", "Courier New", monospace;
+  font-weight: bold;
+}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+.homeMain .cl-rootBox {
+  margin: auto;
+  margin-top: 10%;
+}
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+.loadingMain {
+  margin-top: 5%;
+  text-align: center;
+}
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+.loadingMain .loadingTitle {
+  font-family: "Lucida Console", "Courier New", monospace;
+  font-weight: bold;
+  margin: auto;
+}
+
+.cl-userButtonBox {
+  top: 1em;
+  right: 1em;
+  position: absolute;
+}
+
+.todoMain {
+  margin-top: 10%;
+}
+
+.todoMain .todoTitle {
+  font-family: "Lucida Console", "Courier New", monospace;
+  font-weight: bold;
+  margin: auto;
+  text-align: center;
+}
+
+.idMain {
+  margin-top: 5%;
+}
+
+.idMain .idTitle {
+  margin: auto;
+  text-align: center;
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+	box-sizing: border-box;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+	font-family: 'Gloria Hallelujah', cursive;
+	font-size: 1.4rem;
+	background: whitesmoke;
+	margin: auto;
+	padding: 1rem;
+	display: grid;
+	place-items: center;
+	min-height: 100vh;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+ul {
+	list-style-position: outside;
+	width: 600px;
+	max-width: 100%;
+	background: white;
+	box-shadow: 0.25rem 0.25rem 0.75rem rgb(0 0 0 / 0.15);
+	padding: 0;
+	margin: auto;
+  margin-top: 5%;
+	border-radius: 0.1rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+li {
+	padding: 0 0 0 1rem;
+}
+
+li:not(:last-child) {
+	border-bottom: 1px solid lightblue;
+}
+
+li:first-child {
+	margin-top: 1rem;
+}
+
+li:last-child {
+	margin-bottom: 1rem;
+}
+
+li::marker {
+  content: counter(list-item) ' ';
+}
+
+.doneLink {
+  margin-top: 5%;
+  text-align: center;
+}
+
+.addBar {
+  margin-top: 10%;
+  text-align: center;
+}
+
+.addButton {
+  border-radius: 20px;
+  cursor: pointer;
+  transition-duration: 0.4s;
+  background-color: white;
+  color: black;
+  border: 2px solid cornflowerblue;
+}
+
+.addButton:hover {
+  background-color: cornflowerblue;
+  color: white;
+}
+
+.addInput {
+  border-radius: 5px;
+  margin-right: 0.5em;
+  width: 39%;
+}
+
+.doneButton {
+  float: right;
+  margin-right: 0.5em;
+}
+
+.buttonMark {
+  border-radius: 20px;
+  cursor: pointer;
+  transition-duration: 0.4s;
+}
+
+.buttonMarkY {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #4CAF50;
+}
+
+.buttonMarkY:hover {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.buttonMarkN {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #f44336;
+}
+
+.buttonMarkN:hover {
+  background-color: #f44336;
+  color: white;
+}
+
+.contentPreview {
+  display: inline-block;
+  width: 400px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.saveButton {
+  border-radius: 20px;
+  cursor: pointer;
+  transition-duration: 0.4s;
+  background-color: white;
+  color: black;
+  border: 2px solid orange;
+  margin-right: 3em;
+}
+
+.saveButton:hover {
+  background-color: orange;
+  color: white;
+}
+
+.saveInput {
+  margin: auto;
+  margin-top: 5%;
+  border-radius: 5px;
+  display: block;
+}
+
+.detailsGroup {
+  text-align: center;
+}
+
+.doneLinkId {
+  display: block;
+  margin-top: 5%;
+  text-align: center;
 }
